@@ -2,58 +2,58 @@
 /* { dg-skip-if "" { powerpc*-*-darwin* } { "*" } { "" } } */
 /* { dg-require-effective-target powerpc_vsx_ok } */
 /* { dg-options "-O3 -ftree-vectorize -mcpu=power7 -ffast-math -mveclibabi=mass" } */
-/* { dg-final { scan-assembler "bl atan2d2" } } */
-/* { dg-final { scan-assembler "bl atan2f4" } } */
-/* { dg-final { scan-assembler "bl hypotd2" } } */
-/* { dg-final { scan-assembler "bl hypotf4" } } */
-/* { dg-final { scan-assembler "bl powd2" } } */
-/* { dg-final { scan-assembler "bl powf4" } } */
-/* { dg-final { scan-assembler "bl acosd2" } } */
-/* { dg-final { scan-assembler "bl acosf4" } } */
-/* { dg-final { scan-assembler "bl acoshd2" } } */
-/* { dg-final { scan-assembler "bl acoshf4" } } */
-/* { dg-final { scan-assembler "bl asind2" } } */
-/* { dg-final { scan-assembler "bl asinf4" } } */
-/* { dg-final { scan-assembler "bl asinhd2" } } */
-/* { dg-final { scan-assembler "bl asinhf4" } } */
-/* { dg-final { scan-assembler "bl atand2" } } */
-/* { dg-final { scan-assembler "bl atanf4" } } */
-/* { dg-final { scan-assembler "bl atanhd2" } } */
-/* { dg-final { scan-assembler "bl atanhf4" } } */
-/* { dg-final { scan-assembler "bl cbrtd2" } } */
-/* { dg-final { scan-assembler "bl cbrtf4" } } */
-/* { dg-final { scan-assembler "bl cosd2" } } */
-/* { dg-final { scan-assembler "bl cosf4" } } */
-/* { dg-final { scan-assembler "bl coshd2" } } */
-/* { dg-final { scan-assembler "bl coshf4" } } */
-/* { dg-final { scan-assembler "bl erfd2" } } */
-/* { dg-final { scan-assembler "bl erff4" } } */
-/* { dg-final { scan-assembler "bl erfcd2" } } */
-/* { dg-final { scan-assembler "bl erfcf4" } } */
-/* { dg-final { scan-assembler "bl exp2d2" } } */
-/* { dg-final { scan-assembler "bl exp2f4" } } */
-/* { dg-final { scan-assembler "bl expd2" } } */
-/* { dg-final { scan-assembler "bl expf4" } } */
-/* { dg-final { scan-assembler "bl expm1d2" } } */
-/* { dg-final { scan-assembler "bl expm1f4" } } */
-/* { dg-final { scan-assembler "bl lgamma" } } */
-/* { dg-final { scan-assembler "bl lgammaf" } } */
-/* { dg-final { scan-assembler "bl log10d2" } } */
-/* { dg-final { scan-assembler "bl log10f4" } } */
-/* { dg-final { scan-assembler "bl log1pd2" } } */
-/* { dg-final { scan-assembler "bl log1pf4" } } */
-/* { dg-final { scan-assembler "bl log2d2" } } */
-/* { dg-final { scan-assembler "bl log2f4" } } */
-/* { dg-final { scan-assembler "bl logd2" } } */
-/* { dg-final { scan-assembler "bl logf4" } } */
-/* { dg-final { scan-assembler "bl sind2" } } */
-/* { dg-final { scan-assembler "bl sinf4" } } */
-/* { dg-final { scan-assembler "bl sinhd2" } } */
-/* { dg-final { scan-assembler "bl sinhf4" } } */
-/* { dg-final { scan-assembler "bl tand2" } } */
-/* { dg-final { scan-assembler "bl tanf4" } } */
-/* { dg-final { scan-assembler "bl tanhd2" } } */
-/* { dg-final { scan-assembler "bl tanhf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+atan2d2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+atan2f4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+hypotd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+hypotf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+powd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+powf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+acosd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+acosf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+acoshd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+acoshf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+asind2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+asinf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+asinhd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+asinhf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+atand2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+atanf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+atanhd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+atanhf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+cbrtd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+cbrtf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+cosd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+cosf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+coshd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+coshf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+erfd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+erff4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+erfcd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+erfcf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+exp2d2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+exp2f4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+expd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+expf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+expm1d2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+expm1f4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+lgamma" } } */
+/* { dg-final { scan-assembler "bl[\. ]+lgammaf" } } */
+/* { dg-final { scan-assembler "bl[\. ]+log10d2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+log10f4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+log1pd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+log1pf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+log2d2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+log2f4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+logd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+logf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+sind2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+sinf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+sinhd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+sinhf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+tand2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+tanf4" } } */
+/* { dg-final { scan-assembler "bl[\. ]+tanhd2" } } */
+/* { dg-final { scan-assembler "bl[\. ]+tanhf4" } } */
 
 #ifndef SIZE
 #define SIZE 1024
